--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,6 @@ dependencies = [
     "google-cloud-monitoring",
     "google-cloud-pubsub",
     "google-cloud-storage",
-    # TODO: https://github.com/grpc/grpc/issues/31885
-    "grpcio<1.51.1",
     "fastparquet",
     "opentelemetry-api",
     "opentelemetry-sdk",
@@ -32,9 +30,10 @@ dependencies = [
     "opentelemetry-exporter-jaeger",
     "pandas",
     "pulumi==3.35.3",
+    "pulumi_aws",
     "pulumi_gcp",
     "pyarrow",
-    "pydantic < 2.0.2",
+    "pydantic<2.0.2",
     # Avoid issue with cython 3.0.0 and pyyaml:
     #   https://github.com/yaml/pyyaml/issues/724
     "pyyaml!=5.4.1,!=5.4.0,!=6.0.0",
