--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -7,9 +7,9 @@ on:
     branches: ["release-*"]
 
 jobs:
-  release_tests:
+  gcp_release_tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 30
     permissions:
       contents: write
       id-token: write
@@ -52,3 +52,31 @@ jobs:
         run: |
           export GCP_PROJECT=${{ secrets.GCP_PROJECT }}
           ./release_tests/pubsub_to_pubsub/test.sh
+
+  aws_release_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions:
+      contents: write
+      id-token: write
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+
+      - name: "Set up Pulumi"
+        run: |
+          curl -fsSL https://get.pulumi.com | sh
+
+      - name: Run SQS -> SQS Release Test
+        run: |
+          ./release_tests/sqs_to_sqs/test.sh
