--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "boto3",
     "dacite",
     "duckdb",
+    "gcsfs",
     "google-auth",
     "google-cloud-bigquery",
     "google-cloud-bigquery-storage",
@@ -32,11 +33,14 @@ dependencies = [
     "pulumi==3.35.3",
     "pulumi_aws",
     "pulumi_gcp",
+    "pulumi_snowflake",
     "pyarrow",
     "pydantic<2.0.2",
     # Avoid issue with cython 3.0.0 and pyyaml:
     #   https://github.com/yaml/pyyaml/issues/724
     "pyyaml!=5.4.1,!=5.4.0,!=6.0.0",
+    "s3fs",
+    "snowflake-ingest",
     "ray[default] > 2.0.0",
     "ray[serve] > 2.0.0",
     "typer",
