--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "google-cloud-monitoring",
     "google-cloud-pubsub",
     "google-cloud-storage",
+    "grpcio!=1.49.1",
     "fastparquet",
     "opentelemetry-api",
     "opentelemetry-sdk",
