--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,8 @@ dependencies = [
     "pyyaml!=5.4.1,!=5.4.0,!=6.0.0",
     "s3fs",
     "snowflake-ingest",
-    "ray[default] > 2.0.0",
-    "ray[serve] > 2.0.0",
+    "ray[default]>=2.4.0",
+    "ray[serve]>=2.4.0",
     "typer",
     "redis",
     "watchdog",
