--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "buildflow"
-version = "0.2.0"
+version = "0.2.1"
 authors = [
     { name = "Caleb Van Dyke", email = "caleb@launchflow.com" },
     { name = "Josh Tanke", email = "josh@launchflow.com" },
@@ -25,7 +25,7 @@ dependencies = [
     "google-cloud-monitoring",
     "google-cloud-pubsub",
     "google-cloud-storage",
-    "grpcio!=1.49.1",
+    "grpcio>=1.56.0",
     "fastparquet",
     "opentelemetry-api",
     "opentelemetry-sdk",
