--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "opentelemetry-sdk",
     "opentelemetry-exporter-otlp",
     "opentelemetry-exporter-jaeger",
+    "pathspec",
     # Duckdb doesn't work with this version.
     # We can remove this once duckdb has released version 0.8.2
     "pandas!=2.1.0",
@@ -45,7 +46,7 @@ dependencies = [
     "pydantic<2.0.2",
     # Avoid issue with cython 3.0.0 and pyyaml:
     #   https://github.com/yaml/pyyaml/issues/724
-    "pyyaml!=5.4.1,!=5.4.0,!=6.0.0",
+    "pyyaml!=5.4.1,!=5.4.0,<6.0.0",
     "s3fs",
     "sqlalchemy",
     "snowflake-ingest",
