--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dependencies = [
     "pydantic<2.0.2",
     # Avoid issue with cython 3.0.0 and pyyaml:
     #   https://github.com/yaml/pyyaml/issues/724
-    "pyyaml!=5.4.1,!=5.4.0,<6.0.0",
+    "pyyaml<5.4.0,<6.0.0",
     "s3fs",
     "sqlalchemy",
     "snowflake-ingest",
