--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 requires = ["setuptools>=64.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+
 [project]
 name = "buildflow"
 version = "0.2.2"
@@ -113,3 +114,6 @@ profile = "black"
 markers = [
     "ray: marks tests as slow because it will spin up ray (deselect with '-m \"not ray\"')",
 ]
+
+[tool.setuptools]
+include-package-data = true
