--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -80,3 +80,42 @@ jobs:
       - name: Run SQS -> SQS Release Test
         run: |
           ./release_tests/sqs_to_sqs/test.sh
+
+  multi_cloud_release_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions:
+      contents: write
+      id-token: write
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+
+      - name: Setup GCP Auth
+        uses: "google-github-actions/auth@v1"
+        with:
+          # NOTE: We use a key file here because changing the quota project
+          # doesn't work with WIF.
+          credentials_json: ${{ secrets.GCP_SA_JSON_KEY }}
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v1"
+
+      - name: "Set up Pulumi"
+        run: |
+          curl -fsSL https://get.pulumi.com | sh
+
+      - name: Run S3FileStream -> BigQuery Release Test
+        run: |
+          ./release_tests/s3_to_bigquery/test.sh
