--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "boto3",
     "dacite",
     "duckdb",
+    "clickhouse-connect==0.6.14",
     "gcsfs",
     "google-auth",
     "google-cloud-bigquery",
