--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,10 @@ classifiers = [
 
 [project.optional-dependencies]
 dev = [
-    "aiobotocore",
+    # There was an issue with this for moto3 testing.
+    # was getting the following error:
+    #   module 'aiobotocore' has no attribute 'AioSession'
+    "aiobotocore<2.7.0",
     "aiohttp",
     "botocore",
     "isort",
