fix: modified clickhouse_strategies based on feedback

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "cloud-sql-python-connector",
     "dacite",
     "duckdb",
-    "clickhouse-connect==0.6.14",
+    "clickhouse-connect",
     "gcsfs",
     "google-auth",
     "google-cloud-bigquery",
