add support for websockets and add support for custom sqlalchemy args (#302)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "dacite",
     "duckdb",
     "gcsfs",
+    "google-api-python-client",
     "google-auth",
     "google-cloud-bigquery",
     "google-cloud-bigquery-storage",
@@ -76,6 +77,7 @@ dev = [
     "ruff",
     "pre-commit",
     "setuptools",
+    "websockets",
     "wheel",
 ]
 
