make CLI pretty, and add CloudSQL user primitive

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dependencies = [
     "snowflake-ingest",
     "ray[default]>=2.4.0",
     "ray[serve]>=2.4.0",
-    "typer",
+    "typer[all]",
     "redis",
     "watchfiles",
 ]
