--- a/release_tests/pubsub_to_pubsub/buildflow.yaml
+++ b/release_tests/pubsub_to_pubsub/buildflow.yaml
@@ -1,5 +1,6 @@
 app: pubsub-to-pubsub
 pulumi_config:
+    default_stack: local
     stacks:
     -   name: local
         backend_url: file://./.buildflow/_pulumi/local
