--- a/buildflow/samples/csv_bigquery_walkthrough/buildflow.yaml
+++ b/buildflow/samples/csv_bigquery_walkthrough/buildflow.yaml
@@ -1,5 +1,6 @@
 app: gcs-to-bigquery
 pulumi_config:
+    default_stack: local
     stacks:
     -   name: local
         backend_url: file://./.buildflow/_pulumi/local
