--- a/release_tests/s3_to_bigquery/buildflow.yaml
+++ b/release_tests/s3_to_bigquery/buildflow.yaml
@@ -1,5 +1,6 @@
 app: s3-to-bigquery
 pulumi_config:
+    default_stack: local
     stacks:
     -   name: local
         backend_url: file://./.buildflow/_pulumi/local
