--- a/release_tests/sqs_to_sqs/buildflow.yaml
+++ b/release_tests/sqs_to_sqs/buildflow.yaml
@@ -1,5 +1,6 @@
 app: sqs-to-sqs
 pulumi_config:
+    default_stack: local
     stacks:
     -   name: local
         backend_url: file://./.buildflow/_pulumi/local
