added sink for clickhouse (#298)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "cloud-sql-python-connector",
     "dacite",
     "duckdb",
+    "clickhouse-connect",
     "gcsfs",
     "google-api-python-client",
     "google-auth",
