--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ description = "BuildFlow, is an open source framework for building large scale s
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "asyncpg",
     "black",
     # TODO: split up AWS and GCP dependencies.
     "boto3",
