--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -55,7 +55,7 @@ jobs:
           pip install .[dev]
       - name: Test with pytest
         run: |
-          pytest --disable-warnings --cov -s -k test_runtime_end_to_end
+          pytest --disable-warnings --cov -s -k test_runtime_scales_up
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
