--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ description = "BuildFlow, is an open source framework for building large scale s
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "asyncpg",
     "black",
     # TODO: split up AWS and GCP dependencies.
     "boto3",
@@ -51,7 +52,7 @@ dependencies = [
     #   https://github.com/yaml/pyyaml/issues/724
     "pyyaml<5.4.0,<6.0.0",
     "s3fs",
-    "sqlalchemy",
+    "sqlalchemy[asyncio]",
     "snowflake-ingest",
     "ray[default]>=2.4.0",
     "ray[serve]>=2.4.0",
