remove dependency on pandas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "pathspec",
     # Duckdb doesn't work with this version.
     # We can remove this once duckdb has released version 0.8.2
-    "pandas!=2.1.0",
+    "pandas",
     "pg8000",
     "pulumi==3.35.3",
     "pulumi_aws",
